--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* GLOBAL STYLES */
+body {
+  background: #333;
+  padding-top: 5em;
+  display: flex;
+  justify-content: center;
+}
+
 input[type="radio"] {
     display: none;
 }
