--- a/style.css
+++ b/style.css
@@ -1,39 +1,56 @@
 /* GLOBAL STYLES */
+html {
+  height: 100vh;
+  padding: 0;
+}
+body {
+  min-height: 75vh;
+  padding: 0;
+}
+
 body {
   background: #333;
+  font-family: monospace;
   padding-top: 5em;
+  font-size: 2em;
+  color: #fff;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
-input[type="radio"] {
-    display: none;
-}
-
-label {
-  padding: 10px 20px;
-  background-color: orange;
-  border: thin solid darkorange;
-  border-radius: 10px;
-  margin:5px;
-  display: inline-block;
-}
-
-input[type="radio"]:checked + label {
-    background-color: darkblue;
-    cursor: default;
-    color: #E6E6E6;
-}
-
+/* DEMO-SPECIFIC STYLES */
 .typewriter h1 {
+  font-size: 4em;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
+    typing 1.5s steps(14, end),
+    blink-caret 1s step-end infinite;
+}
+.sudden {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  /*border-right: .15em solid orange; /* The typwriter cursor */*/
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 1cm auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .1em; /* Adjust as needed */
+  animation: 
+    typing 2.5s steps(1, end),
+    blink-caret 1s step-end infinite;
+}
+.sudden2 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  /*border-right: .15em solid orange; /* The typwriter cursor */*/
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .1em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(1, end),
+    blink-caret 1s step-end infinite;
 }
 
 /* The typing effect */
@@ -45,5 +62,53 @@ input[type="radio"]:checked + label {
 /* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color: orange; }
+  50% { border-color: orange }
+}
+
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 12px;
+  font-size: 1em;
+}
+
+button.no {
+  background-color: #B22222; /* Red */
+}
+
+.alert {
+  display: none;
+  margin-top: 2em;
+  padding: 20px;
+  font-size: 1em;
+  /*background-color: #f44336;*/
+  color: white;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
+
+.btm {
+  margin-top: auto;
+}
+
+.hide {
+  display: none;
 }
