--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   color: #fff;
   display: flex;
   flex-direction: column;
-  align-itrems: center;
+  align-items: center;
   justify-content: center;
 }
 
